[package]
name = "athena"
version = "0.1.0"
edition = "2021"
authors = ["kingston"]
description = "A Cloudflare worker for serving static sites"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2" }
worker-macros = { version = "0.4.2" }
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = "0.4.38"
