[package]
name = "athena"
version = "0.1.0"
edition = "2021"
authors = ["kingston"]
description = "A Cloudflare worker for serving static sites"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.38", features = ["wasm-bindgen"] }
console_error_panic_hook = { version = "0.1.7" }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
worker = { version = "0.4.2" }
worker-macros = { version = "0.4.2" }
